--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- 
     TODO
     - Add carousel. DONE
-    - Carousel content on hover animation.
+    - Carousel content on hover animation. DONE
     - Add search autocomplete.
     - Observe breakpoints and add media queries.
     - Replace placeholders with content i.e. avatar and logo. DONE
@@ -61,9 +61,8 @@
                             <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
                         </svg>
                     </div>
-                    <div style="font-size: 18px;"
-                        class="notification-count notification-active  notification-count-position">
-                        <p class="center">
+                    <div class="notification-count-position">
+                        <p class="notification-count notification-active center">
                             3
                         </p>
                     </div>
@@ -210,7 +209,7 @@
                         </div>
                         <div class="carousel-cell">
                             <img class="featured-cover" src="/img/moana.jpg" alt="book-cover">
-                            <div class="book-details content-effect">
+                            <div class="book-details width-80p content-effect book-text-white">
                                 <div class="availiabilty">
                                     <p class="book-text mv-8 status-yes">
                                         Available
