feat: moved to images to cloudinary.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                         </p>
                     </div>
                 </div>
-                <img class=" avatar" src="./img/profile.png" alt="">
+                <img class=" avatar"
+                    src=".https://res.cloudinary.com/favourcodes/image/upload/v1594580161/profile_vbefkf.png" alt="">
             </div>
         </div>
     </nav>
@@ -241,7 +242,9 @@
                 <section class="featured">
                     <div class="carousel" data-flickity='{  "cellAlign": "left","freeScroll": true }'>
                         <div class="carousel-cell">
-                            <img class="featured-cover" src="/img/bbcdune.jpg" alt="book-cover">
+                            <img class="featured-cover"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580159/bbcdune_okcbmy.jpg"
+                                alt="book-cover">
                             <div id="options" onclick="on()" class="more-options center">
                                 <svg height="28" width="20">
                                     <circle cx="10" cy="7" r="1" stroke="grey" stroke-width="2" fill="grey" />
@@ -339,7 +342,9 @@
                             </div>
                         </div>
                         <div class="carousel-cell">
-                            <img class="featured-cover" src="/img/city.jpg" alt="book-cover">
+                            <img class="featured-cover"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580158/city_bei309.jpg"
+                                alt="book-cover">
                             <div id="options" onclick="on()" class="more-options center">
                                 <svg height="28" width="20">
                                     <circle cx="10" cy="7" r="1" stroke="grey" stroke-width="2" fill="grey" />
@@ -437,7 +442,9 @@
                             </div>
                         </div>
                         <div class="carousel-cell">
-                            <img class="featured-cover" src="/img/moana.jpg" alt="book-cover">
+                            <img class="featured-cover"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580160/moana_efz3nv.jpg"
+                                alt="book-cover">
                             <div id="options" onclick="on()" class="more-options center">
                                 <svg height="28" width="20">
                                     <circle cx="10" cy="7" r="1" stroke="grey" stroke-width="2" fill="grey" />
@@ -535,7 +542,9 @@
                             </div>
                         </div>
                         <div class="carousel-cell">
-                            <img class="featured-cover" src="/img/morning-sky.jpg" alt="book-cover">
+                            <img class="featured-cover"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580158/morning-sky_hdwiob.jpg"
+                                alt="book-cover">
                             <div id="options" onclick="on()" class="more-options center">
                                 <svg height="28" width="20">
                                     <circle cx="10" cy="7" r="1" stroke="grey" stroke-width="2" fill="grey" />
@@ -633,7 +642,9 @@
                             </div>
                         </div>
                         <div class="carousel-cell">
-                            <img class="featured-cover" src="/img/out-of-the-box.jpg" alt="book-cover">
+                            <img class="featured-cover"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580160/out-of-the-box_d4zfqw.jpg"
+                                alt="book-cover">
                             <div id="options" onclick="on()" class="more-options center">
                                 <svg height="28" width="20">
                                     <circle cx="10" cy="7" r="1" stroke="grey" stroke-width="2" fill="grey" />
@@ -731,7 +742,9 @@
                             </div>
                         </div>
                         <div class="carousel-cell">
-                            <img class="featured-cover" src="/img/the-arsonist.jpg" alt="book-cover">
+                            <img class="featured-cover"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580161/the-arsonist_dtjrcp.jpg"
+                                alt="book-cover">
                             <div id="options" onclick="on()" class="more-options center">
                                 <svg height="28" width="20">
                                     <circle cx="10" cy="7" r="1" stroke="grey" stroke-width="2" fill="grey" />
@@ -829,7 +842,9 @@
                             </div>
                         </div>
                         <div class="carousel-cell">
-                            <img class="featured-cover" src="/img/web-of-lies.jpeg" alt="book-cover">
+                            <img class="featured-cover"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580160/web-of-lies_smspad.jpg"
+                                alt="book-cover">
                             <div id="options" onclick="on()" class="more-options center">
                                 <svg height="28" width="20">
                                     <circle cx="10" cy="7" r="1" stroke="grey" stroke-width="2" fill="grey" />
@@ -927,7 +942,9 @@
                             </div>
                         </div>
                         <div class="carousel-cell">
-                            <img class="featured-cover" src="/img/city.jpg" alt="book-cover">
+                            <img class="featured-cover"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580158/city_bei309.jpg"
+                                alt="book-cover">
                             <div id="options" onclick="on()" class="more-options center">
                                 <svg height="28" width="20">
                                     <circle cx="10" cy="7" r="1" stroke="grey" stroke-width="2" fill="grey" />
@@ -1025,7 +1042,9 @@
                             </div>
                         </div>
                         <div class="carousel-cell">
-                            <img class="featured-cover" src="/img/moana.jpg" alt="book-cover">
+                            <img class="featured-cover"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580160/moana_efz3nv.jpg"
+                                alt="book-cover">
                             <div id="options" onclick="on()" class="more-options center">
                                 <svg height="28" width="20">
                                     <circle cx="10" cy="7" r="1" stroke="grey" stroke-width="2" fill="grey" />
@@ -1132,7 +1151,9 @@
                 <section class="books-listing mv-24">
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/bbcdune.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580159/bbcdune_okcbmy.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -1216,7 +1237,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/city.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580158/city_bei309.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -1300,7 +1323,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/moana.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580160/moana_efz3nv.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -1384,7 +1409,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/morning-sky.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580158/morning-sky_hdwiob.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -1468,7 +1495,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/out-of-the-box.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580160/out-of-the-box_d4zfqw.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -1552,7 +1581,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/the-arsonist.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580161/the-arsonist_dtjrcp.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -1644,7 +1675,9 @@
                 <section class="books-listing mv-24">
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/web-of-lies.jpeg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580160/web-of-lies_smspad.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -1728,7 +1761,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/bbcdune.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580159/bbcdune_okcbmy.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -1812,7 +1847,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/city.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580158/city_bei309.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -1896,7 +1933,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/moana.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580160/moana_efz3nv.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -1980,7 +2019,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/morning-sky.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580158/morning-sky_hdwiob.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -2064,7 +2105,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/out-of-the-box.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580160/out-of-the-box_d4zfqw.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -2148,7 +2191,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/the-arsonist.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580161/the-arsonist_dtjrcp.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -2232,7 +2277,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/bbcdune.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580159/bbcdune_okcbmy.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
@@ -2316,7 +2363,9 @@
                     </div>
                     <div class="book">
                         <div class="book-cover">
-                            <img class="book-cover-image" src="/img/bbcdune.jpg" alt="book-cover">
+                            <img class="book-cover-image"
+                                src="https://res.cloudinary.com/favourcodes/image/upload/v1594580159/bbcdune_okcbmy.jpg"
+                                alt="book-cover">
                         </div>
                         <div class="book-details mh-12">
                             <div class="availiabilty">
