fix: removed typo

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <img class=" avatar"
-                    src=".https://res.cloudinary.com/favourcodes/image/upload/v1594580161/profile_vbefkf.png" alt="">
+                    src="https://res.cloudinary.com/favourcodes/image/upload/v1594580161/profile_vbefkf.png" alt="">
             </div>
         </div>
     </nav>
